--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -60,12 +60,12 @@ jobs:
         cp bin/Release/net8.0/TMDBintros.dll package/
         cd package && zip -r ../TMDBintros.zip . && cd ..
         
-    - name: Calculate SHA256
-      id: sha256
+    - name: Calculate MD5
+      id: md5
       run: |
-        SHA256=$(sha256sum TMDBintros.zip | cut -d' ' -f1)
-        echo "checksum=$SHA256" >> $GITHUB_OUTPUT
-        echo "SHA256: $SHA256"
+        MD5=$(md5sum TMDBintros.zip | cut -d' ' -f1)
+        echo "checksum=$MD5" >> $GITHUB_OUTPUT
+        echo "MD5: $MD5"
         
     - name: Create Release
       id: create_release
@@ -92,9 +92,9 @@ jobs:
           **Or use as Custom Repository:**
           Add `https://raw.githubusercontent.com/kernastra/TMDBintros/main/manifest.json` to Jellyfin's custom repositories.
           
-          ## SHA256 Checksum
+          ## MD5 Checksum
           ```
-          ${{ steps.sha256.outputs.checksum }}
+          ${{ steps.md5.outputs.checksum }}
           ```
         draft: false
         prerelease: false
