🎯 Bundled Version Release - Zero Dependencies
✅ NEW FEATURES:
• Bundled yt-dlp binaries for all platforms (Linux, FreeBSD, macOS, Windows)
• Automatic platform detection and binary selection
• Smart fallback to system yt-dlp if needed
• Zero external dependencies required

✅ PLATFORM SUPPORT:
• TrueNAS Core/SCALE ready
• Docker container compatible
• Cross-platform binary support
• Self-contained 56MB package

✅ ENHANCED SERVICES:
• VideoDownloadService: Added GetYtDlpPath() with platform detection
• TrailerProcessingService: Enhanced error handling
• Updated project configuration for resource bundling

✅ DOCUMENTATION & INSTALLATION:
• Comprehensive installation guides
• Repository manifest for easy Jellyfin integration
• Automated installation scripts
• Plugin submission documentation

✅ REPOSITORY INTEGRATION:
• manifest-bundled.json for version management
• repository-manifest.json for Jellyfin plugin catalog
• Easy copy-paste URL installation for users

🚀 Ready for immediate deployment with zero setup required!

--- a/TMDBintros.csproj
+++ b/TMDBintros.csproj
@@ -28,6 +28,7 @@
   <ItemGroup>
     <None Include="build.yaml" />
     <EmbeddedResource Include="Configuration\configPage.html" />
+    <None Include="Resources\binaries\**" CopyToOutputDirectory="PreserveNewest" />
   </ItemGroup>
 
 </Project>
