--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 [
   {
-    "guid": "eb5212ba-b5e0-4aa4-a00c-9ab0cb4d1a5f",
-    "name": "TMDB Trailers (Bundled yt-dlp)",
-    "description": "Downloads movie trailers from TMDB with bundled yt-dlp - no external dependencies required",
+    "guid": "eb5212ba-b5e0-4aa4-a00c-9ab0cb4d1a60",
+    "name": "TMDB Trailers (Bundled yt-dlp) - Fresh Install",
+    "description": "Downloads movie trailers from TMDB with bundled yt-dlp - no external dependencies required (Fresh Install Version)",
     "overview": "🎬 **SELF-CONTAINED TRAILER DOWNLOADER**\n\nThis plugin automatically downloads movie trailers from The Movie Database (TMDB) API with **ZERO external dependencies**.\n\n✅ **BUNDLED yt-dlp**: Includes binaries for Linux, FreeBSD, macOS, Windows\n✅ **TrueNAS READY**: Works out-of-the-box on TrueNAS Core/SCALE\n✅ **DOCKER COMPATIBLE**: No external tool installation needed\n✅ **AUTO-DETECTION**: Automatically selects correct binary for your platform\n✅ **SMART FALLBACK**: Falls back to system yt-dlp if needed\n\n🔧 **Features:**\n• Configurable video quality (480p/720p/1080p)\n• Automatic file organization\n• Scheduled processing\n• Custom trailer folder naming\n• Duration filtering\n• Cross-platform compatibility\n\n📦 **Perfect for:**\n• TrueNAS servers (Core/SCALE)\n• Docker containers\n• Restricted environments\n• Users who don't want to install yt-dlp manually\n\n🚀 **Installation:** Just add this repository URL to Jellyfin and install - no additional setup required!",
     "owner": "kernastra",
     "category": "General",
