--- a/manifest.json
+++ b/manifest.json
@@ -24,6 +24,14 @@
         "timestamp": "2024-12-19T18:00:00Z"
       },
       {
+        "version": "2.0.6.0",
+        "changelog": "🔧 PYTHON INSTALLATION FIX!\n\n✅ FIXED: 'sh: 1: update: not found' error in Python installation\n✅ IMPROVED: Use bash instead of sh for better command compatibility\n✅ ENHANCED: More detailed logging for installation attempts\n✅ ADDED: Docker-specific guidance for permission issues\n✅ IMPROVED: Better error messages and troubleshooting guidance\n✅ FIXED: Container permission detection and handling\n\n🛠️ **Technical Improvements:**\n• Fixed command parsing issues causing installation failures\n• Enhanced error detection for permission problems\n• Better guidance for Docker container limitations\n• Improved diagnostic logging for troubleshooting\n\n📦 Package size: ~15MB (yt-dlp Python scripts + improved auto-installer)\n🎬 Resolves Python installation issues in Docker containers!",
+        "targetAbi": "10.8.13.0",
+        "sourceUrl": "https://github.com/kernastra/TMDBintros/releases/download/v2.0.6/TMDBintros-improved-python-v2.0.6.zip",
+        "checksum": "222690795ad8b80db6adc74185e7b888",
+        "timestamp": "2025-08-04T09:00:00Z"
+      },
+      {
         "version": "2.0.2.0",
         "changelog": "🔧 BINARY EXECUTION FIX\n\n✅ FIXED: Exit code 127 error - enhanced chmod with multiple strategies\n✅ FIXED: Binary permission issues on TrueNAS and Docker\n✅ IMPROVED: Enhanced diagnostic logging for binary execution failures\n✅ NEW: File permission verification and reporting\n✅ NEW: Binary architecture analysis with 'file' command\n✅ NEW: Specific error guidance for common exit codes\n\n🛠️ **Technical Improvements:**\n• Multiple chmod approaches: 755, +x, u+x\n• Async method support for better performance\n• Detailed STDOUT/STDERR capture\n• File permission diagnostics (ls -la output)\n• Architecture mismatch detection\n\n📦 Package size: ~56MB (includes all platform binaries)\n🎬 Specifically fixes 'yt-dlp binary test failed: exit code: 127' error!",
         "targetAbi": "10.8.13.0",
