--- a/manifest.json
+++ b/manifest.json
@@ -24,11 +24,19 @@
         "timestamp": "2024-12-19T18:00:00Z"
       },
       {
+        "version": "2.0.7.0",
+        "changelog": "🔧 PYTHON INSTALLATION FIX (Re-release)!\n\n✅ FIXED: 'sh: 1: update: not found' error in Python installation\n✅ IMPROVED: Use bash instead of sh for better command compatibility\n✅ ENHANCED: More detailed logging for installation attempts\n✅ ADDED: Docker-specific guidance for permission issues\n✅ IMPROVED: Better error messages and troubleshooting guidance\n✅ FIXED: Container permission detection and handling\n\n🛠️ **Technical Improvements:**\n• Fixed command parsing issues causing installation failures\n• Enhanced error detection for permission problems\n• Better guidance for Docker container limitations\n• Improved diagnostic logging for troubleshooting\n\n📦 Package size: ~15MB (yt-dlp Python scripts + improved auto-installer)\n🎬 Resolves Python installation issues in Docker containers!",
+        "targetAbi": "10.8.13.0",
+        "sourceUrl": "https://github.com/kernastra/TMDBintros/releases/download/v2.0.7/TMDBintros-improved-python-v2.0.7.zip",
+        "checksum": "d96f831a18ddfd55eeedc16f564c61a5",
+        "timestamp": "2025-08-04T16:00:00Z"
+      },
+      {
         "version": "2.0.6.0",
         "changelog": "🔧 PYTHON INSTALLATION FIX!\n\n✅ FIXED: 'sh: 1: update: not found' error in Python installation\n✅ IMPROVED: Use bash instead of sh for better command compatibility\n✅ ENHANCED: More detailed logging for installation attempts\n✅ ADDED: Docker-specific guidance for permission issues\n✅ IMPROVED: Better error messages and troubleshooting guidance\n✅ FIXED: Container permission detection and handling\n\n🛠️ **Technical Improvements:**\n• Fixed command parsing issues causing installation failures\n• Enhanced error detection for permission problems\n• Better guidance for Docker container limitations\n• Improved diagnostic logging for troubleshooting\n\n📦 Package size: ~15MB (yt-dlp Python scripts + improved auto-installer)\n🎬 Resolves Python installation issues in Docker containers!",
         "targetAbi": "10.8.13.0",
-        "sourceUrl": "https://github.com/kernastra/TMDBintros/releases/download/v2.0.6/TMDBintros-improved-python-v2.0.6.zip",
-        "checksum": "a8cdb07ed3b7be7660bb36a45c318b20",
+        "sourceUrl": "https://github.com/kernastra/TMDBintros/releases/download/v2.0.5/TMDBintros-auto-python.zip",
+        "checksum": "7574255a5ff0bd77c333d29f71666ac9",
         "timestamp": "2025-08-04T09:00:00Z"
       },
       {
