--- a/.gitignore
+++ b/.gitignore
@@ -1,449 +1,298 @@
-# .NET Build Outputs
-bin/
-obj/
-out/
+# ================================
+# TMDB Trailer Downloader Project
+# ================================
 
-# User-specific files
-*.rsuser
-*.suo
-*.user
-*.userosscache
-*.sln.docstates
+# Environment files with sensitive data (CRITICAL - NEVER COMMIT THESE)
+.env
+.env.*
+!.env.example
+!.env.docker
+*.env
+*.env.*
+!*.env.example
 
-# User-specific files (MonoDevelop/Xamarin Studio)
-*.userprefs
-
-# Mono auto generated files
-mono_crash.*
-
-# Build results
-[Dd]ebug/
-[Dd]ebugPublic/
-[Rr]elease/
-[Rr]eleases/
-x64/
-x86/
-[Ww][Ii][Nn]32/
-[Aa][Rr][Mm]/
-[Aa][Rr][Mm]64/
-bld/
-[Bb]in/
-[Oo]bj/
-[Ll]og/
-[Ll]ogs/
-
-# Visual Studio 2015/2017 cache/options directory
-.vs/
-# Uncomment if you have tasks that create the project's static files in wwwroot
-#wwwroot/
-
-# Visual Studio 2017 auto generated files
-Generated\ Files/
-
-# MSTest test Results
-[Tt]est[Rr]esult*/
-[Bb]uild[Ll]og.*
-
-# NUnit
-*.VisualState.xml
-TestResult.xml
-nunit-*.xml
-
-# Build Results of an ATL Project
-[Dd]ebugPS/
-[Rr]eleasePS/
-dlldata.c
-
-# Benchmark Results
-BenchmarkDotNet.Artifacts/
-
-# .NET Core
-project.lock.json
-project.fragment.lock.json
-artifacts/
-
-# ASP.NET Scaffolding
-ScaffoldingReadMe.txt
-
-# StyleCop
-StyleCopReport.xml
-
-# Files built by Visual Studio
-*_i.c
-*_p.c
-*_h.h
-*.ilk
-*.meta
-*.obj
-*.iobj
-*.pch
-*.pdb
-*.ipdb
-*.pgc
-*.pgd
-*.rsp
-*.sbr
-*.tlb
-*.tli
-*.tlh
-*.tmp
-*.tmp_proj
-*_wpftmp.csproj
-*.log
-*.tlog
-*.vspscc
-*.vssscc
-.builds
-*.pidb
-*.svclog
-*.scc
-
-# Chutzpah Test files
-_Chutzpah*
-
-# Visual C++ cache files
-ipch/
-*.aps
-*.ncb
-*.opendb
-*.opensdf
-*.sdf
-*.cachefile
-*.VC.db
-*.VC.VC.opendb
-
-# Visual Studio profiler
-*.psess
-*.vsp
-*.vspx
-*.sap
-
-# Visual Studio Trace Files
-*.e2e
-
-# TFS 2012 Local Workspace
-$tf/
-
-# Guidance Automation Toolkit
-*.gpState
-
-# ReSharper is a .NET coding add-in
-_ReSharper*/
-*.[Rr]e[Ss]harper
-*.DotSettings.user
-
-# TeamCity is a build add-in
-_TeamCity*
-
-# DotCover is a Code Coverage Tool
-*.dotCover
-
-# AxoCover is a Code Coverage Tool
-.axoCover/*
-!.axoCover/settings.json
-
-# Coverlet is a free, cross platform Code Coverage Tool
-coverage*.json
-coverage*.xml
-coverage*.info
-
-# Visual Studio code coverage results
-*.coverage
-*.coveragexml
-
-# NCrunch
-_NCrunch_*
-.*crunch*.local.xml
-nCrunchTemp_*
-
-# MightyMoose
-*.mm.*
-AutoTest.Net/
-
-# Web workbench (sass)
-.sass-cache/
-
-# Installshield output folder
-[Ee]xpress/
-
-# DocProject is a documentation generator add-in
-DocProject/buildhelp/
-DocProject/Help/*.HxT
-DocProject/Help/*.HxC
-DocProject/Help/Html2
-DocProject/Help/html
-
-# Click-Once directory
-publish/
-
-# Publish Web Output
-*.[Pp]ublish.xml
-*.azurePubxml
-# Note: Comment the next line if you want to checkin your web deploy settings,
-# but database connection strings (with potential passwords) will be unencrypted
-*.pubxml
-*.publishproj
-
-# Microsoft Azure Web App publish settings. Comment the next line if you want to
-# checkin your Azure Web App publish settings, but sensitive information contained
-# in these files may be published
-*.azurePubxml.user
-
-# Microsoft Azure Build Output
-csx/
-*.build.csdef
-
-# Microsoft Azure Emulator
-ecf/
-rcf/
-
-# Windows Store app package directories and files
-AppPackages/
-BundleArtifacts/
-Package.StoreAssociation.xml
-_pkginfo.txt
-*.appx
-*.appxbundle
-*.appxupload
-
-# Visual Studio cache files
-# files ending in .cache can be ignored
-*.[Cc]ache
-# but keep track of directories ending in .cache
-!?*.[Cc]ache/
-
-# Others
-ClientBin/
-~$*
-*~
-*.dbmdl
-*.dbproj.schemaview
-*.jfm
+# API Keys and Credentials (SECURITY CRITICAL)
+*api*key*
+*password*
+*secret*
+*token*
+credentials.json
+config.json.backup
+config.local.*
+auth.json
+keys.json
+*.key
+*.pem
+*.p12
+*.cert
 *.pfx
-*.publishsettings
-orleans.codegen.cs
 
-# Including strong name files can present a security risk
-# (https://github.com/github/gitignore/pull/2483#issue-259490424)
-#*.snk
+# ================================
+# Python Specific
+# ================================
 
-# Since there are multiple workflows, uncomment next line to ignore bower_components
-# (https://github.com/github/gitignore/pull/1529#issuecomment-104372622)
-#bower_components/
-
-# RIA/Silverlight projects
-Generated_Code/
-
-# Backup & report files from converting an old project file
-# to a newer Visual Studio version. Backup files are not needed,
-# because we have git ;-)
-_UpgradeReport_Files/
-Backup*/
-UpgradeLog*.XML
-UpgradeLog*.htm
-CConversionReportDataFile.txt
-
-# SQL Server files
-*.mdf
-*.ldf
-*.ndf
-
-# Business Intelligence projects
-*.rdl.data
-*.bim.layout
-*.bim_*.settings
-*.rptproj.rsuser
-*- [Bb]ackup.rdl
-*- [Bb]ackup ([0-9]).rdl
-*- [Bb]ackup ([0-9][0-9]).rdl
-
-# Microsoft Fakes
-FakesAssemblies/
-
-# GhostDoc plugin setting file
-*.GhostDoc.xml
-
-# Node.js Tools for Visual Studio
-.ntvs_analysis.dat
-node_modules/
-
-# Visual Studio 6 build log
-*.plg
-
-# Visual Studio 6 workspace options file
-*.opt
-
-# Visual Studio 6 auto-generated workspace file (contains which files were open etc.)
-*.vbw
-
-# Visual Studio 6 auto-generated project file (contains which files were open etc.)
-*.vbp
-
-# Visual Studio 6 workspace and project file (working project files containing files to include in project)
-*.dsw
-*.dsp
-
-# Visual Studio 6 technical files
-*.ncb
-*.aps
-
-# Visual Studio LightSwitch build output
-**/*.HTMLClient/GeneratedArtifacts
-**/*.DesktopClient/GeneratedArtifacts
-**/*.DesktopClient/ModelManifest.xml
-**/*.Server/GeneratedArtifacts
-**/*.Server/ModelManifest.xml
-_Pvt_Extensions
-
-# Paket dependency manager
-.paket/paket.exe
-paket-files/
-
-# FAKE - F# Make
-.fake/
-
-# CodeRush personal settings
-.cr/personal
-
-# Python Tools for Visual Studio (PTVS)
+# Byte-compiled / optimized / DLL files
 __pycache__/
-*.pyc
+*.py[cod]
+*$py.class
+*.so
 
-# Cake - Uncomment if you are using it
-# tools/**
-# !tools/packages.config
+# Distribution / packaging
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
 
-# Tabs Studio
-*.tss
+# Unit test / coverage reports
+htmlcov/
+.tox/
+.nox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+*.py,cover
+.hypothesis/
+.pytest_cache/
+cover/
 
-# Telerik's JustMock configuration file
-*.jmconfig
+# Virtual environments
+venv/
+env/
+ENV/
+env.bak/
+venv.bak/
+.env/
+.venv/
 
-# BizTalk build output
-*.btp.cs
-*.btm.cs
-*.odx.cs
-*.xsd.cs
+# ================================
+# Media and Downloads
+# ================================
 
-# OpenCover UI analysis results
-OpenCover/
+# Downloaded trailers and test content
+test_movies/
+downloads/
+media/
+trailers/
+*.mp4
+*.mkv
+*.avi
+*.mov
+*.wmv
+*.flv
+*.webm
+*.m4v
 
-# Azure Stream Analytics local run output
-ASALocalRun/
+# ================================
+# Development and Testing
+# ================================
 
-# MSBuild Binary and Structured Log
-*.binlog
+# Test files and directories
+tests/output/
+test_output/
+sandbox/
+playground/
+debug/
+*.test
+*.debug
 
-# NVidia Nsight GPU debugger configuration file
-*.nvuser
+# Backup files
+*.bak
+*.backup
+*.old
+*.orig
+*~
 
-# MFractors (Xamarin productivity tool) working folder
-.mfractor/
+# Temporary files
+tmp/
+temp/
+*.tmp
+*.temp
+.tmp/
 
-# Local History for Visual Studio
-.localhistory/
+# ================================
+# IDE and Editor Files
+# ================================
 
-# Visual Studio History (VSHistory) files
-.vshistory/
-
-# BeatPulse healthcheck temp database
-healthchecksdb
-
-# Backup folder for Package Reference Convert tool in Visual Studio 2017
-MigrationBackup/
-
-# Ionide (cross platform F# VS Code tools) working folder
-.ionide/
-
-# Fody - auto-generated XML schema
-FodyWeavers.xsd
-
-# VS Code files for those working on multiple tools
-.vscode/*
+# VS Code
+.vscode/
 !.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
 *.code-workspace
 
-# Local History for Visual Studio Code
-.history/
-
-# Windows Installer files from build outputs
-*.cab
-*.msi
-*.msix
-*.msm
-*.msp
-
-# JetBrains Rider
-*.sln.iml
-
-# ================================
-# Jellyfin Plugin Specific
-# ================================
-
-# Plugin packages and distributions
-*.zip
-package/
-
-# Temporary files and downloads
-temp/
-tmp/
-downloads/
-
-# Test and development files
-test-*.zip
-fresh-*.zip
-manual-install.sh
-
-# Runtime generated files
-*.sourcelink.json
-
-# IDE and Editor files
+# PyCharm / IntelliJ
 .idea/
+*.iml
+*.iws
+
+# Sublime Text
+*.sublime-project
+*.sublime-workspace
+
+# Vim
 *.swp
 *.swo
-*~
+*.swn
 
-# OS generated files
+# Emacs
+.#*
+\#*#
+
+# ================================
+# Operating System Files
+# ================================
+
+# macOS
 .DS_Store
 .DS_Store?
 ._*
 .Spotlight-V100
 .Trashes
-ehthumbs.db
+.AppleDouble
+.LSOverride
+
+# Windows
 Thumbs.db
+Thumbs.db:encryptable
+ehthumbs.db
+ehthumbs_vista.db
+*.stackdump
+Desktop.ini
+$RECYCLE.BIN/
 
-# Development and testing artifacts
-*.test
-*.debug
+# Linux
+*~
+.directory
+.Trash-*
+
+# ================================
+# Logs and Output
+# ================================
+
+# Application logs
+*.log
 *.log.*
+logs/
+log/
+debug.log
+error.log
+access.log
+tmdb-*.log
+downloader.log
 
-# Backup files
-*.bak
-*.backup
-*.old
+# Python logging
+*.out
+*.err
 
 # ================================
-# Project Specific Exclusions
+# Network and Mount Points
 # ================================
 
-# Exclude generated plugin packages but keep source
-TMDBintros.zip
-/package/
+# Network mount points (don't commit mount directories)
+/mnt/*/
+mount/
+network/
+shares/
 
-# Exclude test installations
-test-*.zip
-local-test/
+# ================================
+# Package Managers
+# ================================
 
-# Exclude any API keys or sensitive config (if accidentally created)
-apikeys.txt
-secrets.txt
-config.local.*
+# pip
+pip-log.txt
+pip-delete-this-directory.txt
 
-# Exclude any local development scripts
-install-dev.sh
-test-local.sh
+# Poetry
+poetry.lock
+
+# pipenv
+Pipfile.lock
+
+# ================================
+# Database Files
+# ================================
+
+# SQLite
+*.db
+*.sqlite
+*.sqlite3
+
+# ================================
+# Project Specific
+# ================================
+
+# TMDB Trailer Downloader specific files
+config.json.prod
+config.json.dev
+config.json.test
+tmdb_cache/
+trailer_cache/
+
+# Network mount test directories
+test_mount/
+mount_test/
+
+# Development scripts with credentials
+setup_local.sh
+deploy_prod.sh
+install_with_creds.sh
+
+# Performance and profiling
+*.prof
+*.profile
+performance_*.json
+
+# Backup configurations
+config_backup_*/
+settings_backup_*/
+
+# Local development overrides
+local_settings.py
+local_config.json
+dev_config.json
+
+# Container and deployment files with secrets
+docker-compose.override.yml
+docker-compose.prod.yml
+docker-compose.local.yml
+.dockerignore.local
+deployment.env
+
+# Docker volumes and data
+docker-volumes/
+container-data/
+
+# Version and build artifacts
+.version
+build-info.json
+release-*.tar.gz
+
+# Generated scripts and installers
+install_*.sh
+setup_*.sh
+deploy_*.sh
+*.installer
+
+# User-specific movie lists
+my_movies.json
+personal_*.json
+user_*.json
 
 
