🎭 Add upcoming movies feature - v3.1.0
✨ New Features:
- Upcoming movies trailer downloader (3-6 months ahead)
- Proactive trailer collection before adding movies to library
- Smart filtering by popularity and release type
- Automatic cleanup of old upcoming movies
- Integration with existing Docker and native deployments

🔧 Configuration:
- New UPCOMING_* environment variables
- Configurable time window, popularity threshold, and movie limits
- Enhanced config manager with upcoming movies support

🐳 Docker Integration:
- New tmdb-upcoming service with 'upcoming' profile
- Makefile targets: upcoming, upcoming-list, upcoming-cleanup
- Seamless integration with existing container architecture

📊 Dashboard Updates:
- Upcoming movies and trailers statistics
- Enhanced web interface with new metrics
- Real-time tracking of upcoming content

📚 Documentation:
- Comprehensive UPCOMING_MOVIES.md guide
- Updated README with usage examples
- Configuration examples and best practices

🏗️ Technical:
- TMDBUpcomingTrailerDownloader class
- TMDB discover API integration for upcoming releases
- JSON metadata storage for each upcoming movie
- Cinema Mode compatible folder structure preparation

--- a/.env.example
+++ b/.env.example
@@ -37,6 +37,13 @@ SKIP_EXISTING=true
 TRAILER_NAMING_PATTERN=trailer_{index}
 OVERWRITE_EXISTING=false
 
+# Upcoming Movies Configuration
+UPCOMING_ENABLED=false
+UPCOMING_MONTHS_AHEAD=6
+UPCOMING_MIN_POPULARITY=10.0
+UPCOMING_MAX_MOVIES=50
+UPCOMING_CLEANUP_DAYS=30
+
 # Movie Library Scanning
 SCAN_RECURSIVE=true
 MOVIE_FOLDER_PATTERN=^(.+?)\s*\((\d{4})\).*$
