--- a/.env.example
+++ b/.env.example
@@ -10,15 +10,15 @@ DOWNLOAD_QUALITY=best
 
 # Network Share Configuration (optional)
 # Set NETWORK_ENABLED=true to enable automatic network mounting
-NETWORK_ENABLED=false
-NETWORK_TYPE=smb
-NETWORK_SERVER=192.168.1.100
-NETWORK_SHARE=movies
-NETWORK_USERNAME=your_username
-NETWORK_PASSWORD=your_password
-NETWORK_DOMAIN=WORKGROUP
-NETWORK_MOUNT_POINT=/mnt/jellyfin-movies
-NETWORK_AUTO_MOUNT=true
+NETWORK_ENABLED=false                    # Enable/disable network share mounting (true/false)
+NETWORK_TYPE=smb                         # Protocol: smb (CIFS/SMB), nfs, or ssh/sftp
+NETWORK_SERVER=192.168.1.100            # IP address or hostname of your NAS/server
+NETWORK_SHARE=movies                     # SMB share name (not the full path)
+NETWORK_USERNAME=your_username           # Username for SMB authentication
+NETWORK_PASSWORD=your_password           # Password for SMB authentication  
+NETWORK_DOMAIN=WORKGROUP                 # SMB domain (usually WORKGROUP for home networks)
+NETWORK_MOUNT_POINT=/mnt/jellyfin-movies # Local directory where share will be mounted
+NETWORK_AUTO_MOUNT=true                  # Automatically mount/unmount share (true/false)
 
 # NFS Specific Options
 NETWORK_NFS_VERSION=4
@@ -27,22 +27,97 @@ NETWORK_NFS_VERSION=4
 NETWORK_SSH_KEY=/home/user/.ssh/id_rsa
 NETWORK_REMOTE_PATH=/volume1/movies
 
+# Configuration Examples for Common NAS Systems:
+# 
+# TrueNAS/FreeNAS (SMB):
+# NETWORK_TYPE=smb
+# NETWORK_SERVER=192.168.1.100
+# NETWORK_SHARE=movies
+# NETWORK_USERNAME=your_truenas_username
+# NETWORK_DOMAIN=WORKGROUP
+#
+# Synology (SMB):
+# NETWORK_TYPE=smb
+# NETWORK_SERVER=diskstation.local
+# NETWORK_SHARE=movies
+# NETWORK_USERNAME=your_synology_username
+# NETWORK_DOMAIN=WORKGROUP
+#
+# QNAP (SMB):
+# NETWORK_TYPE=smb
+# NETWORK_SERVER=qnap.local
+# NETWORK_SHARE=movies
+# NETWORK_USERNAME=your_qnap_username
+# NETWORK_DOMAIN=WORKGROUP
+#
+# Linux/Unix NFS:
+# NETWORK_TYPE=nfs
+# NETWORK_SERVER=192.168.1.100
+# NETWORK_SHARE=/export/movies
+# (No username/password needed for NFS)
+
 # Logging Configuration
 LOG_LEVEL=INFO
 LOG_FILE=
 
 # Download Options
-MAX_TRAILERS_PER_MOVIE=5
+MAX_TRAILERS_PER_MOVIE=5            # Max trailers for regular library scanning
 SKIP_EXISTING=true
 TRAILER_NAMING_PATTERN=trailer_{index}
 OVERWRITE_EXISTING=false
 
 # Upcoming Movies Configuration
 UPCOMING_ENABLED=false
-UPCOMING_MONTHS_AHEAD=6
-UPCOMING_MIN_POPULARITY=10.0
-UPCOMING_MAX_MOVIES=50
+UPCOMING_DAYS_AHEAD=90               # Days ahead to look for upcoming movies
+UPCOMING_MAX_MOVIES=50               # Maximum upcoming movies to process
+UPCOMING_MAX_TRAILERS_PER_MOVIE=3    # Max trailers per upcoming movie (default: 3)
+UPCOMING_POPULARITY_THRESHOLD=10.0   # Minimum popularity threshold
 UPCOMING_CLEANUP_DAYS=30
+
+# ================================
+# Upcoming Movies Filter Options
+# ================================
+
+# Content Filters
+UPCOMING_FILTER_COUNTRIES=US,GB,CA,AU          # ISO country codes (comma-separated)
+UPCOMING_FILTER_LANGUAGES=en,en-US             # Language codes (comma-separated)
+UPCOMING_FILTER_GENRES=28,12,878,53            # Genre IDs: Action, Adventure, Sci-Fi, Thriller
+UPCOMING_EXCLUDE_GENRES=27,9648,99             # Exclude: Horror, Mystery, Documentary
+
+# Complete TMDB Genre ID Reference:
+# 28=Action, 12=Adventure, 16=Animation, 35=Comedy, 80=Crime, 99=Documentary,
+# 18=Drama, 10751=Family, 14=Fantasy, 36=History, 27=Horror, 10402=Music,
+# 9648=Mystery, 10749=Romance, 878=Science Fiction, 10770=TV Movie,
+# 53=Thriller, 10752=War, 37=Western
+
+# Production Company Filters
+UPCOMING_FILTER_STUDIOS=Marvel,Warner,Disney,Universal,Sony  # Studio names (comma-separated)
+UPCOMING_EXCLUDE_STUDIOS=Netflix,Amazon        # Exclude streaming-only releases
+
+# People Filters  
+UPCOMING_FILTER_DIRECTORS=Christopher Nolan,Denis Villeneuve  # Director names
+UPCOMING_FILTER_ACTORS=                        # Actor names (optional)
+
+# Content Rating Filters
+UPCOMING_FILTER_RATINGS=G,PG,PG-13,R          # MPAA ratings to include
+UPCOMING_EXCLUDE_RATINGS=NC-17                # Ratings to exclude
+
+# Advanced Filters
+UPCOMING_MIN_RUNTIME=90                        # Minimum runtime in minutes
+UPCOMING_MAX_RUNTIME=180                       # Maximum runtime in minutes  
+UPCOMING_MIN_BUDGET=10000000                   # Minimum budget (10M+)
+UPCOMING_FRANCHISE_ONLY=false                  # Only sequels/franchises
+UPCOMING_ORIGINAL_ONLY=false                   # Only original stories (not remakes)
+
+# Quality Filters
+UPCOMING_MIN_VOTE_AVERAGE=6.0                  # Minimum TMDB rating
+UPCOMING_MIN_VOTE_COUNT=100                    # Minimum number of votes
+
+# Radarr Integration (Optional)
+RADARR_ENABLED=false
+RADARR_URL=http://localhost:7878
+RADARR_API_KEY=your_radarr_api_key_here
+RADARR_SYNC_MODE=upcoming                      # upcoming, radarr_only, or hybrid
 
 # Movie Library Scanning
 SCAN_RECURSIVE=true
@@ -53,6 +128,16 @@ DOWNLOAD_TIMEOUT=300
 MAX_CONCURRENT_DOWNLOADS=3
 RETRY_ATTEMPTS=3
 RETRY_DELAY=5
+
+# ================================
+# Web Dashboard Configuration
+# ================================
+
+# Dashboard web interface port (avoids conflicts with media stack)
+DASHBOARD_ENABLED=false
+DASHBOARD_HOST=0.0.0.0
+DASHBOARD_PORT=8085              # Port 8085 (avoids qBittorrent 8080, Jellyfin 8096, etc.)
+DASHBOARD_DEBUG=false
 
 # ================================
 # Monitoring and Automation
